parser.out
Created by PLY version 3.4 (http://www.dabeaz.com/ply)

Unused terminals:

    LISTA

Grammar

Rule 0     S' -> program
Rule 1     program -> INICIOPROGRAMA vars cuerpo FINPROGRAMA
Rule 2     vars -> vars tipo_var
Rule 3     tipo_var -> single
Rule 4     tipo_var -> array
Rule 5     single -> CREAR tipo ID PUNTOCOMA
Rule 6     array -> CREAR tipo ID CORCHETEIZQ CTEENTERO CORCHETEDER PUNTOCOMA
Rule 7     tipo -> ENTERO
Rule 8     tipo -> FLOTANTE
Rule 9     tipo -> TEXTO
Rule 10    tipo -> BOOLEANO
Rule 11    vars -> empty
Rule 12    empty -> <empty>
Rule 13    cuerpo -> cuerpo_func principal
Rule 14    cuerpo_func -> cuerpo_func funcion
Rule 15    cuerpo_func -> empty
Rule 16    funcion -> iniciofunc param vars finfunc
Rule 17    iniciofunc -> INICIOFUNCION tipo ID
Rule 18    param -> PARAMETROS tipo ID param_mult
Rule 19    param_mult -> COMA tipo ID param_mult
Rule 20    param_mult -> empty
Rule 21    param -> empty
Rule 22    finfunc -> C REGRESA expresion FINFUNCION
Rule 23    C -> C estatuto
Rule 24    C -> empty
Rule 25    estatuto -> asignacion
Rule 26    estatuto -> condicion
Rule 27    estatuto -> ciclo
Rule 28    estatuto -> io
Rule 29    estatuto -> accion
Rule 30    estatuto -> llamada_sin_ret
Rule 31    asignacion -> ID asignacion_arreglo IGUAL expresion PUNTOCOMA
Rule 32    asignacion_arreglo -> CORCHETEIZQ exp CORCHETEDER
Rule 33    asignacion_arreglo -> empty
Rule 34    expresion -> exp MAYORQUE push_opt exp
Rule 35    expresion -> exp MENORQUE push_opt exp
Rule 36    expresion -> exp DIFERENTEQUE push_opt exp
Rule 37    expresion -> exp IGUALQUE push_opt exp
Rule 38    expresion -> exp MAYORIGUAL push_opt exp
Rule 39    expresion -> exp MENORIGUAL push_opt exp
Rule 40    exp -> PARENTIZQ expresion PARENTDER
Rule 41    exp -> exp MAS push_opt exp
Rule 42    exp -> exp MENOS push_opt exp
Rule 43    exp -> exp MULT push_opt exp
Rule 44    exp -> exp DIV push_opt exp
Rule 45    push_opt -> empty
Rule 46    exp -> MENOS exp
Rule 47    exp -> CTEENTERO
Rule 48    exp -> CTEFLOTANTE
Rule 49    exp -> TRUE
Rule 50    exp -> FALSE
Rule 51    exp -> CTETEXTO
Rule 52    exp -> ID varfuncarr
Rule 53    varfuncarr -> push_var_opd
Rule 54    varfuncarr -> llamada
Rule 55    varfuncarr -> arraycall
Rule 56    push_var_opd -> empty
Rule 57    llamada -> PARENTIZQ llamada_param PARENTDER
Rule 58    llamada_param -> expresion llamada_param_mult
Rule 59    expresion -> exp
Rule 60    llamada_param_mult -> llamada_param_mult COMA expresion
Rule 61    llamada_param_mult -> empty
Rule 62    llamada_param -> empty
Rule 63    arraycall -> CORCHETEIZQ exp CORCHETEDER
Rule 64    condicion -> SI expresion actSi1 ENTONCES bloque actSi2 condicion_else actSi3 FINSI
Rule 65    actSi1 -> empty
Rule 66    bloque -> INICIOBLOQUE bloque_estatuto_mult FINBLOQUE
Rule 67    bloque_estatuto_mult -> bloque_estatuto_mult estatuto
Rule 68    bloque_estatuto_mult -> empty
Rule 69    actSi2 -> empty
Rule 70    condicion_else -> SINO bloque
Rule 71    condicion_else -> empty
Rule 72    actSi3 -> empty
Rule 73    ciclo -> MIENTRAS actCic1 expresion actCic2 HACER bloque FINMIENTRAS actCic3
Rule 74    actCic1 -> empty
Rule 75    actCic2 -> empty
Rule 76    actCic3 -> empty
Rule 77    io -> DECIRALUSUARIO exp PUNTOCOMA
Rule 78    io -> PEDIRALUSUARIO PARENTIZQ ID asignacion_arreglo PARENTDER PUNTOCOMA
Rule 79    accion -> tipo_accion PUNTOCOMA
Rule 80    tipo_accion -> objeto_con_exp
Rule 81    tipo_accion -> objeto_sin_exp
Rule 82    objeto_con_exp -> GIRARDERECHA exp
Rule 83    objeto_con_exp -> GIRARIZQUIERDA exp
Rule 84    objeto_con_exp -> MOVER exp
Rule 85    objeto_con_exp -> RETROCEDE exp
Rule 86    objeto_sin_exp -> BORRAR
Rule 87    objeto_sin_exp -> PINTAR
Rule 88    objeto_sin_exp -> DESPINTAR
Rule 89    llamada_sin_ret -> ID llamada PUNTOCOMA
Rule 90    principal -> iniciomain vars C FINPRINCIPAL
Rule 91    iniciomain -> INICIOPRINCIPAL

Terminals, with rules where they appear

BOOLEANO             : 10
BORRAR               : 86
COMA                 : 19 60
CORCHETEDER          : 6 32 63
CORCHETEIZQ          : 6 32 63
CREAR                : 5 6
CTEENTERO            : 6 47
CTEFLOTANTE          : 48
CTETEXTO             : 51
DECIRALUSUARIO       : 77
DESPINTAR            : 88
DIFERENTEQUE         : 36
DIV                  : 44
ENTERO               : 7
ENTONCES             : 64
FALSE                : 50
FINBLOQUE            : 66
FINFUNCION           : 22
FINMIENTRAS          : 73
FINPRINCIPAL         : 90
FINPROGRAMA          : 1
FINSI                : 64
FLOTANTE             : 8
GIRARDERECHA         : 82
GIRARIZQUIERDA       : 83
HACER                : 73
ID                   : 5 6 17 18 19 31 52 78 89
IGUAL                : 31
IGUALQUE             : 37
INICIOBLOQUE         : 66
INICIOFUNCION        : 17
INICIOPRINCIPAL      : 91
INICIOPROGRAMA       : 1
LISTA                : 
MAS                  : 41
MAYORIGUAL           : 38
MAYORQUE             : 34
MENORIGUAL           : 39
MENORQUE             : 35
MENOS                : 42 46
MIENTRAS             : 73
MOVER                : 84
MULT                 : 43
PARAMETROS           : 18
PARENTDER            : 40 57 78
PARENTIZQ            : 40 57 78
PEDIRALUSUARIO       : 78
PINTAR               : 87
PUNTOCOMA            : 5 6 31 77 78 79 89
REGRESA              : 22
RETROCEDE            : 85
SI                   : 64
SINO                 : 70
TEXTO                : 9
TRUE                 : 49
error                : 

Nonterminals, with rules where they appear

C                    : 22 23 90
accion               : 29
actCic1              : 73
actCic2              : 73
actCic3              : 73
actSi1               : 64
actSi2               : 64
actSi3               : 64
array                : 4
arraycall            : 55
asignacion           : 25
asignacion_arreglo   : 31 78
bloque               : 64 70 73
bloque_estatuto_mult : 66 67
ciclo                : 27
condicion            : 26
condicion_else       : 64
cuerpo               : 1
cuerpo_func          : 13 14
empty                : 11 15 20 21 24 33 45 56 61 62 65 68 69 71 72 74 75 76
estatuto             : 23 67
exp                  : 32 34 34 35 35 36 36 37 37 38 38 39 39 41 41 42 42 43 43 44 44 46 59 63 77 82 83 84 85
expresion            : 22 31 40 58 60 64 73
finfunc              : 16
funcion              : 14
iniciofunc           : 16
iniciomain           : 90
io                   : 28
llamada              : 54 89
llamada_param        : 57
llamada_param_mult   : 58 60
llamada_sin_ret      : 30
objeto_con_exp       : 80
objeto_sin_exp       : 81
param                : 16
param_mult           : 18 19
principal            : 13
program              : 0
push_opt             : 34 35 36 37 38 39 41 42 43 44
push_var_opd         : 53
single               : 3
tipo                 : 5 6 17 18 19
tipo_accion          : 79
tipo_var             : 2
varfuncarr           : 52
vars                 : 1 2 16 90

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . INICIOPROGRAMA vars cuerpo FINPROGRAMA

    INICIOPROGRAMA  shift and go to state 1

    program                        shift and go to state 2

state 1

    (1) program -> INICIOPROGRAMA . vars cuerpo FINPROGRAMA
    (2) vars -> . vars tipo_var
    (11) vars -> . empty
    (12) empty -> .

    CREAR           reduce using rule 12 (empty -> .)
    INICIOPRINCIPAL reduce using rule 12 (empty -> .)
    INICIOFUNCION   reduce using rule 12 (empty -> .)

    vars                           shift and go to state 4
    empty                          shift and go to state 3

state 2

    (0) S' -> program .



state 3

    (11) vars -> empty .

    CREAR           reduce using rule 11 (vars -> empty .)
    FINPRINCIPAL    reduce using rule 11 (vars -> empty .)
    ID              reduce using rule 11 (vars -> empty .)
    SI              reduce using rule 11 (vars -> empty .)
    MIENTRAS        reduce using rule 11 (vars -> empty .)
    DECIRALUSUARIO  reduce using rule 11 (vars -> empty .)
    PEDIRALUSUARIO  reduce using rule 11 (vars -> empty .)
    GIRARDERECHA    reduce using rule 11 (vars -> empty .)
    GIRARIZQUIERDA  reduce using rule 11 (vars -> empty .)
    MOVER           reduce using rule 11 (vars -> empty .)
    RETROCEDE       reduce using rule 11 (vars -> empty .)
    BORRAR          reduce using rule 11 (vars -> empty .)
    PINTAR          reduce using rule 11 (vars -> empty .)
    DESPINTAR       reduce using rule 11 (vars -> empty .)
    REGRESA         reduce using rule 11 (vars -> empty .)
    INICIOPRINCIPAL reduce using rule 11 (vars -> empty .)
    INICIOFUNCION   reduce using rule 11 (vars -> empty .)


state 4

    (1) program -> INICIOPROGRAMA vars . cuerpo FINPROGRAMA
    (2) vars -> vars . tipo_var
    (13) cuerpo -> . cuerpo_func principal
    (3) tipo_var -> . single
    (4) tipo_var -> . array
    (14) cuerpo_func -> . cuerpo_func funcion
    (15) cuerpo_func -> . empty
    (5) single -> . CREAR tipo ID PUNTOCOMA
    (6) array -> . CREAR tipo ID CORCHETEIZQ CTEENTERO CORCHETEDER PUNTOCOMA
    (12) empty -> .

    CREAR           shift and go to state 9
    INICIOPRINCIPAL reduce using rule 12 (empty -> .)
    INICIOFUNCION   reduce using rule 12 (empty -> .)

    tipo_var                       shift and go to state 8
    single                         shift and go to state 5
    empty                          shift and go to state 7
    array                          shift and go to state 6
    cuerpo                         shift and go to state 10
    cuerpo_func                    shift and go to state 11

state 5

    (3) tipo_var -> single .

    CREAR           reduce using rule 3 (tipo_var -> single .)
    REGRESA         reduce using rule 3 (tipo_var -> single .)
    ID              reduce using rule 3 (tipo_var -> single .)
    SI              reduce using rule 3 (tipo_var -> single .)
    MIENTRAS        reduce using rule 3 (tipo_var -> single .)
    DECIRALUSUARIO  reduce using rule 3 (tipo_var -> single .)
    PEDIRALUSUARIO  reduce using rule 3 (tipo_var -> single .)
    GIRARDERECHA    reduce using rule 3 (tipo_var -> single .)
    GIRARIZQUIERDA  reduce using rule 3 (tipo_var -> single .)
    MOVER           reduce using rule 3 (tipo_var -> single .)
    RETROCEDE       reduce using rule 3 (tipo_var -> single .)
    BORRAR          reduce using rule 3 (tipo_var -> single .)
    PINTAR          reduce using rule 3 (tipo_var -> single .)
    DESPINTAR       reduce using rule 3 (tipo_var -> single .)
    INICIOPRINCIPAL reduce using rule 3 (tipo_var -> single .)
    INICIOFUNCION   reduce using rule 3 (tipo_var -> single .)
    FINPRINCIPAL    reduce using rule 3 (tipo_var -> single .)


state 6

    (4) tipo_var -> array .

    CREAR           reduce using rule 4 (tipo_var -> array .)
    REGRESA         reduce using rule 4 (tipo_var -> array .)
    ID              reduce using rule 4 (tipo_var -> array .)
    SI              reduce using rule 4 (tipo_var -> array .)
    MIENTRAS        reduce using rule 4 (tipo_var -> array .)
    DECIRALUSUARIO  reduce using rule 4 (tipo_var -> array .)
    PEDIRALUSUARIO  reduce using rule 4 (tipo_var -> array .)
    GIRARDERECHA    reduce using rule 4 (tipo_var -> array .)
    GIRARIZQUIERDA  reduce using rule 4 (tipo_var -> array .)
    MOVER           reduce using rule 4 (tipo_var -> array .)
    RETROCEDE       reduce using rule 4 (tipo_var -> array .)
    BORRAR          reduce using rule 4 (tipo_var -> array .)
    PINTAR          reduce using rule 4 (tipo_var -> array .)
    DESPINTAR       reduce using rule 4 (tipo_var -> array .)
    INICIOPRINCIPAL reduce using rule 4 (tipo_var -> array .)
    INICIOFUNCION   reduce using rule 4 (tipo_var -> array .)
    FINPRINCIPAL    reduce using rule 4 (tipo_var -> array .)


state 7

    (15) cuerpo_func -> empty .

    INICIOPRINCIPAL reduce using rule 15 (cuerpo_func -> empty .)
    INICIOFUNCION   reduce using rule 15 (cuerpo_func -> empty .)


state 8

    (2) vars -> vars tipo_var .

    CREAR           reduce using rule 2 (vars -> vars tipo_var .)
    FINPRINCIPAL    reduce using rule 2 (vars -> vars tipo_var .)
    ID              reduce using rule 2 (vars -> vars tipo_var .)
    SI              reduce using rule 2 (vars -> vars tipo_var .)
    MIENTRAS        reduce using rule 2 (vars -> vars tipo_var .)
    DECIRALUSUARIO  reduce using rule 2 (vars -> vars tipo_var .)
    PEDIRALUSUARIO  reduce using rule 2 (vars -> vars tipo_var .)
    GIRARDERECHA    reduce using rule 2 (vars -> vars tipo_var .)
    GIRARIZQUIERDA  reduce using rule 2 (vars -> vars tipo_var .)
    MOVER           reduce using rule 2 (vars -> vars tipo_var .)
    RETROCEDE       reduce using rule 2 (vars -> vars tipo_var .)
    BORRAR          reduce using rule 2 (vars -> vars tipo_var .)
    PINTAR          reduce using rule 2 (vars -> vars tipo_var .)
    DESPINTAR       reduce using rule 2 (vars -> vars tipo_var .)
    REGRESA         reduce using rule 2 (vars -> vars tipo_var .)
    INICIOPRINCIPAL reduce using rule 2 (vars -> vars tipo_var .)
    INICIOFUNCION   reduce using rule 2 (vars -> vars tipo_var .)


state 9

    (5) single -> CREAR . tipo ID PUNTOCOMA
    (6) array -> CREAR . tipo ID CORCHETEIZQ CTEENTERO CORCHETEDER PUNTOCOMA
    (7) tipo -> . ENTERO
    (8) tipo -> . FLOTANTE
    (9) tipo -> . TEXTO
    (10) tipo -> . BOOLEANO

    ENTERO          shift and go to state 14
    FLOTANTE        shift and go to state 13
    TEXTO           shift and go to state 16
    BOOLEANO        shift and go to state 15

    tipo                           shift and go to state 12

state 10

    (1) program -> INICIOPROGRAMA vars cuerpo . FINPROGRAMA

    FINPROGRAMA     shift and go to state 17


state 11

    (13) cuerpo -> cuerpo_func . principal
    (14) cuerpo_func -> cuerpo_func . funcion
    (90) principal -> . iniciomain vars C FINPRINCIPAL
    (16) funcion -> . iniciofunc param vars finfunc
    (91) iniciomain -> . INICIOPRINCIPAL
    (17) iniciofunc -> . INICIOFUNCION tipo ID

    INICIOPRINCIPAL shift and go to state 21
    INICIOFUNCION   shift and go to state 20

    principal                      shift and go to state 19
    iniciofunc                     shift and go to state 18
    funcion                        shift and go to state 22
    iniciomain                     shift and go to state 23

state 12

    (5) single -> CREAR tipo . ID PUNTOCOMA
    (6) array -> CREAR tipo . ID CORCHETEIZQ CTEENTERO CORCHETEDER PUNTOCOMA

    ID              shift and go to state 24


state 13

    (8) tipo -> FLOTANTE .

    ID              reduce using rule 8 (tipo -> FLOTANTE .)


state 14

    (7) tipo -> ENTERO .

    ID              reduce using rule 7 (tipo -> ENTERO .)


state 15

    (10) tipo -> BOOLEANO .

    ID              reduce using rule 10 (tipo -> BOOLEANO .)


state 16

    (9) tipo -> TEXTO .

    ID              reduce using rule 9 (tipo -> TEXTO .)


state 17

    (1) program -> INICIOPROGRAMA vars cuerpo FINPROGRAMA .

    $end            reduce using rule 1 (program -> INICIOPROGRAMA vars cuerpo FINPROGRAMA .)


state 18

    (16) funcion -> iniciofunc . param vars finfunc
    (18) param -> . PARAMETROS tipo ID param_mult
    (21) param -> . empty
    (12) empty -> .

    PARAMETROS      shift and go to state 25
    CREAR           reduce using rule 12 (empty -> .)
    REGRESA         reduce using rule 12 (empty -> .)
    ID              reduce using rule 12 (empty -> .)
    SI              reduce using rule 12 (empty -> .)
    MIENTRAS        reduce using rule 12 (empty -> .)
    DECIRALUSUARIO  reduce using rule 12 (empty -> .)
    PEDIRALUSUARIO  reduce using rule 12 (empty -> .)
    GIRARDERECHA    reduce using rule 12 (empty -> .)
    GIRARIZQUIERDA  reduce using rule 12 (empty -> .)
    MOVER           reduce using rule 12 (empty -> .)
    RETROCEDE       reduce using rule 12 (empty -> .)
    BORRAR          reduce using rule 12 (empty -> .)
    PINTAR          reduce using rule 12 (empty -> .)
    DESPINTAR       reduce using rule 12 (empty -> .)

    empty                          shift and go to state 26
    param                          shift and go to state 27

state 19

    (13) cuerpo -> cuerpo_func principal .

    FINPROGRAMA     reduce using rule 13 (cuerpo -> cuerpo_func principal .)


state 20

    (17) iniciofunc -> INICIOFUNCION . tipo ID
    (7) tipo -> . ENTERO
    (8) tipo -> . FLOTANTE
    (9) tipo -> . TEXTO
    (10) tipo -> . BOOLEANO

    ENTERO          shift and go to state 14
    FLOTANTE        shift and go to state 13
    TEXTO           shift and go to state 16
    BOOLEANO        shift and go to state 15

    tipo                           shift and go to state 28

state 21

    (91) iniciomain -> INICIOPRINCIPAL .

    CREAR           reduce using rule 91 (iniciomain -> INICIOPRINCIPAL .)
    FINPRINCIPAL    reduce using rule 91 (iniciomain -> INICIOPRINCIPAL .)
    ID              reduce using rule 91 (iniciomain -> INICIOPRINCIPAL .)
    SI              reduce using rule 91 (iniciomain -> INICIOPRINCIPAL .)
    MIENTRAS        reduce using rule 91 (iniciomain -> INICIOPRINCIPAL .)
    DECIRALUSUARIO  reduce using rule 91 (iniciomain -> INICIOPRINCIPAL .)
    PEDIRALUSUARIO  reduce using rule 91 (iniciomain -> INICIOPRINCIPAL .)
    GIRARDERECHA    reduce using rule 91 (iniciomain -> INICIOPRINCIPAL .)
    GIRARIZQUIERDA  reduce using rule 91 (iniciomain -> INICIOPRINCIPAL .)
    MOVER           reduce using rule 91 (iniciomain -> INICIOPRINCIPAL .)
    RETROCEDE       reduce using rule 91 (iniciomain -> INICIOPRINCIPAL .)
    BORRAR          reduce using rule 91 (iniciomain -> INICIOPRINCIPAL .)
    PINTAR          reduce using rule 91 (iniciomain -> INICIOPRINCIPAL .)
    DESPINTAR       reduce using rule 91 (iniciomain -> INICIOPRINCIPAL .)


state 22

    (14) cuerpo_func -> cuerpo_func funcion .

    INICIOPRINCIPAL reduce using rule 14 (cuerpo_func -> cuerpo_func funcion .)
    INICIOFUNCION   reduce using rule 14 (cuerpo_func -> cuerpo_func funcion .)


state 23

    (90) principal -> iniciomain . vars C FINPRINCIPAL
    (2) vars -> . vars tipo_var
    (11) vars -> . empty
    (12) empty -> .

    CREAR           reduce using rule 12 (empty -> .)
    FINPRINCIPAL    reduce using rule 12 (empty -> .)
    ID              reduce using rule 12 (empty -> .)
    SI              reduce using rule 12 (empty -> .)
    MIENTRAS        reduce using rule 12 (empty -> .)
    DECIRALUSUARIO  reduce using rule 12 (empty -> .)
    PEDIRALUSUARIO  reduce using rule 12 (empty -> .)
    GIRARDERECHA    reduce using rule 12 (empty -> .)
    GIRARIZQUIERDA  reduce using rule 12 (empty -> .)
    MOVER           reduce using rule 12 (empty -> .)
    RETROCEDE       reduce using rule 12 (empty -> .)
    BORRAR          reduce using rule 12 (empty -> .)
    PINTAR          reduce using rule 12 (empty -> .)
    DESPINTAR       reduce using rule 12 (empty -> .)

    vars                           shift and go to state 29
    empty                          shift and go to state 3

state 24

    (5) single -> CREAR tipo ID . PUNTOCOMA
    (6) array -> CREAR tipo ID . CORCHETEIZQ CTEENTERO CORCHETEDER PUNTOCOMA

    PUNTOCOMA       shift and go to state 30
    CORCHETEIZQ     shift and go to state 31


state 25

    (18) param -> PARAMETROS . tipo ID param_mult
    (7) tipo -> . ENTERO
    (8) tipo -> . FLOTANTE
    (9) tipo -> . TEXTO
    (10) tipo -> . BOOLEANO

    ENTERO          shift and go to state 14
    FLOTANTE        shift and go to state 13
    TEXTO           shift and go to state 16
    BOOLEANO        shift and go to state 15

    tipo                           shift and go to state 32

state 26

    (21) param -> empty .

    CREAR           reduce using rule 21 (param -> empty .)
    REGRESA         reduce using rule 21 (param -> empty .)
    ID              reduce using rule 21 (param -> empty .)
    SI              reduce using rule 21 (param -> empty .)
    MIENTRAS        reduce using rule 21 (param -> empty .)
    DECIRALUSUARIO  reduce using rule 21 (param -> empty .)
    PEDIRALUSUARIO  reduce using rule 21 (param -> empty .)
    GIRARDERECHA    reduce using rule 21 (param -> empty .)
    GIRARIZQUIERDA  reduce using rule 21 (param -> empty .)
    MOVER           reduce using rule 21 (param -> empty .)
    RETROCEDE       reduce using rule 21 (param -> empty .)
    BORRAR          reduce using rule 21 (param -> empty .)
    PINTAR          reduce using rule 21 (param -> empty .)
    DESPINTAR       reduce using rule 21 (param -> empty .)


state 27

    (16) funcion -> iniciofunc param . vars finfunc
    (2) vars -> . vars tipo_var
    (11) vars -> . empty
    (12) empty -> .

    CREAR           reduce using rule 12 (empty -> .)
    REGRESA         reduce using rule 12 (empty -> .)
    ID              reduce using rule 12 (empty -> .)
    SI              reduce using rule 12 (empty -> .)
    MIENTRAS        reduce using rule 12 (empty -> .)
    DECIRALUSUARIO  reduce using rule 12 (empty -> .)
    PEDIRALUSUARIO  reduce using rule 12 (empty -> .)
    GIRARDERECHA    reduce using rule 12 (empty -> .)
    GIRARIZQUIERDA  reduce using rule 12 (empty -> .)
    MOVER           reduce using rule 12 (empty -> .)
    RETROCEDE       reduce using rule 12 (empty -> .)
    BORRAR          reduce using rule 12 (empty -> .)
    PINTAR          reduce using rule 12 (empty -> .)
    DESPINTAR       reduce using rule 12 (empty -> .)

    empty                          shift and go to state 3
    vars                           shift and go to state 33

state 28

    (17) iniciofunc -> INICIOFUNCION tipo . ID

    ID              shift and go to state 34


state 29

    (90) principal -> iniciomain vars . C FINPRINCIPAL
    (2) vars -> vars . tipo_var
    (23) C -> . C estatuto
    (24) C -> . empty
    (3) tipo_var -> . single
    (4) tipo_var -> . array
    (12) empty -> .
    (5) single -> . CREAR tipo ID PUNTOCOMA
    (6) array -> . CREAR tipo ID CORCHETEIZQ CTEENTERO CORCHETEDER PUNTOCOMA

    FINPRINCIPAL    reduce using rule 12 (empty -> .)
    ID              reduce using rule 12 (empty -> .)
    SI              reduce using rule 12 (empty -> .)
    MIENTRAS        reduce using rule 12 (empty -> .)
    DECIRALUSUARIO  reduce using rule 12 (empty -> .)
    PEDIRALUSUARIO  reduce using rule 12 (empty -> .)
    GIRARDERECHA    reduce using rule 12 (empty -> .)
    GIRARIZQUIERDA  reduce using rule 12 (empty -> .)
    MOVER           reduce using rule 12 (empty -> .)
    RETROCEDE       reduce using rule 12 (empty -> .)
    BORRAR          reduce using rule 12 (empty -> .)
    PINTAR          reduce using rule 12 (empty -> .)
    DESPINTAR       reduce using rule 12 (empty -> .)
    CREAR           shift and go to state 9

    C                              shift and go to state 36
    tipo_var                       shift and go to state 8
    single                         shift and go to state 5
    empty                          shift and go to state 35
    array                          shift and go to state 6

state 30

    (5) single -> CREAR tipo ID PUNTOCOMA .

    CREAR           reduce using rule 5 (single -> CREAR tipo ID PUNTOCOMA .)
    FINPRINCIPAL    reduce using rule 5 (single -> CREAR tipo ID PUNTOCOMA .)
    ID              reduce using rule 5 (single -> CREAR tipo ID PUNTOCOMA .)
    SI              reduce using rule 5 (single -> CREAR tipo ID PUNTOCOMA .)
    MIENTRAS        reduce using rule 5 (single -> CREAR tipo ID PUNTOCOMA .)
    DECIRALUSUARIO  reduce using rule 5 (single -> CREAR tipo ID PUNTOCOMA .)
    PEDIRALUSUARIO  reduce using rule 5 (single -> CREAR tipo ID PUNTOCOMA .)
    GIRARDERECHA    reduce using rule 5 (single -> CREAR tipo ID PUNTOCOMA .)
    GIRARIZQUIERDA  reduce using rule 5 (single -> CREAR tipo ID PUNTOCOMA .)
    MOVER           reduce using rule 5 (single -> CREAR tipo ID PUNTOCOMA .)
    RETROCEDE       reduce using rule 5 (single -> CREAR tipo ID PUNTOCOMA .)
    BORRAR          reduce using rule 5 (single -> CREAR tipo ID PUNTOCOMA .)
    PINTAR          reduce using rule 5 (single -> CREAR tipo ID PUNTOCOMA .)
    DESPINTAR       reduce using rule 5 (single -> CREAR tipo ID PUNTOCOMA .)
    INICIOPRINCIPAL reduce using rule 5 (single -> CREAR tipo ID PUNTOCOMA .)
    INICIOFUNCION   reduce using rule 5 (single -> CREAR tipo ID PUNTOCOMA .)
    REGRESA         reduce using rule 5 (single -> CREAR tipo ID PUNTOCOMA .)


state 31

    (6) array -> CREAR tipo ID CORCHETEIZQ . CTEENTERO CORCHETEDER PUNTOCOMA

    CTEENTERO       shift and go to state 37


state 32

    (18) param -> PARAMETROS tipo . ID param_mult

    ID              shift and go to state 38


state 33

    (16) funcion -> iniciofunc param vars . finfunc
    (2) vars -> vars . tipo_var
    (22) finfunc -> . C REGRESA expresion FINFUNCION
    (3) tipo_var -> . single
    (4) tipo_var -> . array
    (23) C -> . C estatuto
    (24) C -> . empty
    (5) single -> . CREAR tipo ID PUNTOCOMA
    (6) array -> . CREAR tipo ID CORCHETEIZQ CTEENTERO CORCHETEDER PUNTOCOMA
    (12) empty -> .

    CREAR           shift and go to state 9
    REGRESA         reduce using rule 12 (empty -> .)
    ID              reduce using rule 12 (empty -> .)
    SI              reduce using rule 12 (empty -> .)
    MIENTRAS        reduce using rule 12 (empty -> .)
    DECIRALUSUARIO  reduce using rule 12 (empty -> .)
    PEDIRALUSUARIO  reduce using rule 12 (empty -> .)
    GIRARDERECHA    reduce using rule 12 (empty -> .)
    GIRARIZQUIERDA  reduce using rule 12 (empty -> .)
    MOVER           reduce using rule 12 (empty -> .)
    RETROCEDE       reduce using rule 12 (empty -> .)
    BORRAR          reduce using rule 12 (empty -> .)
    PINTAR          reduce using rule 12 (empty -> .)
    DESPINTAR       reduce using rule 12 (empty -> .)

    single                         shift and go to state 5
    finfunc                        shift and go to state 39
    array                          shift and go to state 6
    C                              shift and go to state 40
    empty                          shift and go to state 35
    tipo_var                       shift and go to state 8

state 34

    (17) iniciofunc -> INICIOFUNCION tipo ID .

    PARAMETROS      reduce using rule 17 (iniciofunc -> INICIOFUNCION tipo ID .)
    CREAR           reduce using rule 17 (iniciofunc -> INICIOFUNCION tipo ID .)
    REGRESA         reduce using rule 17 (iniciofunc -> INICIOFUNCION tipo ID .)
    ID              reduce using rule 17 (iniciofunc -> INICIOFUNCION tipo ID .)
    SI              reduce using rule 17 (iniciofunc -> INICIOFUNCION tipo ID .)
    MIENTRAS        reduce using rule 17 (iniciofunc -> INICIOFUNCION tipo ID .)
    DECIRALUSUARIO  reduce using rule 17 (iniciofunc -> INICIOFUNCION tipo ID .)
    PEDIRALUSUARIO  reduce using rule 17 (iniciofunc -> INICIOFUNCION tipo ID .)
    GIRARDERECHA    reduce using rule 17 (iniciofunc -> INICIOFUNCION tipo ID .)
    GIRARIZQUIERDA  reduce using rule 17 (iniciofunc -> INICIOFUNCION tipo ID .)
    MOVER           reduce using rule 17 (iniciofunc -> INICIOFUNCION tipo ID .)
    RETROCEDE       reduce using rule 17 (iniciofunc -> INICIOFUNCION tipo ID .)
    BORRAR          reduce using rule 17 (iniciofunc -> INICIOFUNCION tipo ID .)
    PINTAR          reduce using rule 17 (iniciofunc -> INICIOFUNCION tipo ID .)
    DESPINTAR       reduce using rule 17 (iniciofunc -> INICIOFUNCION tipo ID .)


state 35

    (24) C -> empty .

    FINPRINCIPAL    reduce using rule 24 (C -> empty .)
    ID              reduce using rule 24 (C -> empty .)
    SI              reduce using rule 24 (C -> empty .)
    MIENTRAS        reduce using rule 24 (C -> empty .)
    DECIRALUSUARIO  reduce using rule 24 (C -> empty .)
    PEDIRALUSUARIO  reduce using rule 24 (C -> empty .)
    GIRARDERECHA    reduce using rule 24 (C -> empty .)
    GIRARIZQUIERDA  reduce using rule 24 (C -> empty .)
    MOVER           reduce using rule 24 (C -> empty .)
    RETROCEDE       reduce using rule 24 (C -> empty .)
    BORRAR          reduce using rule 24 (C -> empty .)
    PINTAR          reduce using rule 24 (C -> empty .)
    DESPINTAR       reduce using rule 24 (C -> empty .)
    REGRESA         reduce using rule 24 (C -> empty .)


state 36

    (90) principal -> iniciomain vars C . FINPRINCIPAL
    (23) C -> C . estatuto
    (25) estatuto -> . asignacion
    (26) estatuto -> . condicion
    (27) estatuto -> . ciclo
    (28) estatuto -> . io
    (29) estatuto -> . accion
    (30) estatuto -> . llamada_sin_ret
    (31) asignacion -> . ID asignacion_arreglo IGUAL expresion PUNTOCOMA
    (64) condicion -> . SI expresion actSi1 ENTONCES bloque actSi2 condicion_else actSi3 FINSI
    (73) ciclo -> . MIENTRAS actCic1 expresion actCic2 HACER bloque FINMIENTRAS actCic3
    (77) io -> . DECIRALUSUARIO exp PUNTOCOMA
    (78) io -> . PEDIRALUSUARIO PARENTIZQ ID asignacion_arreglo PARENTDER PUNTOCOMA
    (79) accion -> . tipo_accion PUNTOCOMA
    (89) llamada_sin_ret -> . ID llamada PUNTOCOMA
    (80) tipo_accion -> . objeto_con_exp
    (81) tipo_accion -> . objeto_sin_exp
    (82) objeto_con_exp -> . GIRARDERECHA exp
    (83) objeto_con_exp -> . GIRARIZQUIERDA exp
    (84) objeto_con_exp -> . MOVER exp
    (85) objeto_con_exp -> . RETROCEDE exp
    (86) objeto_sin_exp -> . BORRAR
    (87) objeto_sin_exp -> . PINTAR
    (88) objeto_sin_exp -> . DESPINTAR

    FINPRINCIPAL    shift and go to state 54
    ID              shift and go to state 53
    SI              shift and go to state 52
    MIENTRAS        shift and go to state 47
    DECIRALUSUARIO  shift and go to state 56
    PEDIRALUSUARIO  shift and go to state 50
    GIRARDERECHA    shift and go to state 48
    GIRARIZQUIERDA  shift and go to state 43
    MOVER           shift and go to state 61
    RETROCEDE       shift and go to state 51
    BORRAR          shift and go to state 49
    PINTAR          shift and go to state 45
    DESPINTAR       shift and go to state 60

    objeto_con_exp                 shift and go to state 41
    tipo_accion                    shift and go to state 42
    asignacion                     shift and go to state 44
    io                             shift and go to state 46
    accion                         shift and go to state 55
    llamada_sin_ret                shift and go to state 57
    ciclo                          shift and go to state 58
    estatuto                       shift and go to state 63
    objeto_sin_exp                 shift and go to state 59
    condicion                      shift and go to state 62

state 37

    (6) array -> CREAR tipo ID CORCHETEIZQ CTEENTERO . CORCHETEDER PUNTOCOMA
